@@ -1,3 +1,4 @@
 .build
 .precomp/
 .vsts
+.cache
