@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Compatible with Sparrow6
+
 0.0.3  2018-06-28T19:27:27Z
 
     - Remove some stale stuff
